--- a/t3flex/.project
+++ b/t3flex/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>t3flex</name>
+	<name>T3flex</name>
 	<comment></comment>
 	<projects>
 	</projects>
